// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput should render 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-item"
      >
        <input
          class="input-root form-control input-group-inset input-group-inset-after"
          id="foo"
          name="foo"
          type="password"
          value=""
        />
        <div
          class="input-group-inset-item input-group-inset-item-after"
        >
          <button
            class="button-root btn btn-unstyled"
            type="button"
          >
            <svg
              class="icon-root lexicon-icon lexicon-icon-view"
              viewBox=""
            >
              <use
                xlink:href="/o/osb-faro-web/dist/sprite.svg#view"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordInput should render with an input type of "text" if showPassword is true 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-item"
      >
        <input
          class="input-root form-control input-group-inset input-group-inset-after"
          id="foo"
          name="foo"
          type="text"
          value=""
        />
        <div
          class="input-group-inset-item input-group-inset-item-after"
        >
          <button
            class="button-root btn btn-unstyled"
            type="button"
          >
            <svg
              class="icon-root lexicon-icon lexicon-icon-hidden"
              viewBox=""
            >
              <use
                xlink:href="/o/osb-faro-web/dist/sprite.svg#hidden"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
